Have finished the displayscreen && weather report

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <link rel="stylesheet" href="https://product-gallery.cloudinary.com/all.css" />
+    <script src="https://product-gallery.cloudinary.com/all.js"></script>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
